# django-pyhub-ai

./: .gitignore  .readthedocs.yaml  Dockerfile.docs  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  github-pages.yaml  publish.yml  test.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_static/: custom.css  빽다방.txt
docs/consumers/: api-keys.md  examples.md  index.md
docs/consumers/tools/: index.md  melon.md  naver.md
docs/courses/: index.md
docs/django/: index.rst
docs/django/async/: decorators.rst  index.rst
docs/django/components/: index.rst  variety.rst
docs/django/components/django-components/: index.rst  settings.rst  setup.rst
docs/django/tailwind/: index.rst
docs/hands-on-lab/: index.rst
docs/hands-on-lab/django-webchat-rag/: anthropic.rst  app-models.rst  chat-room.rst  check.rst  closing.rst  index.rst  initial-project.rst  load-data.rst  preparation.rst  rag-cli.rst  search.rst  styles-bubble.rst  styles-loading-indicator.rst  styles-markdown.rst  styles.rst  web-chat-using-form.rst  web-chat-using-htmx.rst  web-rag-chat.rst
docs/hands-on-lab/langcon-2025/: app-models.rst  chat-room.rst  check.rst  closing.rst  index.rst  initial-project.rst  load-data.rst  preparation.rst  rag-cli.rst  web-chat-using-form.rst  web-chat-using-htmx.rst  web-rag-chat.rst
docs/installation/: configuration.md  development.md  index.md  pip-install.md
docs/python/: async.rst
docs/quickstart/: basic-setup.md  basic-setup.rst  customization.md  first-agent.md  first-chat-bot.md  first-chat-bot.rst  first-chat-page.md  first-data-analyst-chat-bot.md  first-data-analyst-chat-bot.rst  index.md  index.rst  install-django-pyhub-ai.md  install-django-pyhub-ai.rst
docs/quickstart_02/: auth.md  auth.rst  conversation-message.md  conversation-messages.md  conversation-messages.rst  index.md  index.rst
docs/rag-01/: api-key.rst  closing.rst  glance.md  glance.rst  index.md  index.rst  langchain.md  overview.md  overview.rst  prices.rst  setup.rst  typical-01.md  typical-02.md  typical-03.md  typical.md  빽다방.txt
docs/rag-01/django/: 00-setup.rst  01-test.rst  02-html-form.rst  03-vanilla-js.rst  04-htmx.rst  05-ai.rst  06-tailwindcss.rst  07-alpinejs.rst  08-rag.rst  09-colorlog.rst  10-markdown.rst  11-async.rst  12-async-stream.rst  index.rst
docs/rag-01/django-llm-chat/: 00-setup.md  01-html-form.md  02-vanilla-js.md  03-htmx.md  04-ai.md  05-tailwindcss.md  06-alpinejs.md  07-rag.md  08-colorlog.md  09-markdown.md  index.md
docs/rag-01/typical/: 01-load.rst  02-split.rst  03-embed.rst  04-store.rst  05-search.rst  index.rst  langchain.rst
docs/rag-02/: abstract-document.rst  batch.rst  bulk-create.rst  closing.rst  django-lifecycle.rst  index.rst  make-vector-store-command.rst  max-token-validator.rst  pgvector-model.rst  pgvector.rst  queryset-search.rst  repr.rst  setup.rst  taxlaw.rst
docs/rag-02/test/: batch.txt  closing.txt  index.txt  make-vector-store-command.txt  pgvector.txt  repr.txt
docs/setup/: index.rst  venv.rst  vscode.rst
docs/setup/databases/: index.rst
docs/setup/databases/mysql/: docker.rst  index.rst
docs/setup/databases/oracle/: index.rst
docs/setup/databases/postgres/: docker.rst  index.rst  linux.rst  pgadmin.rst  supabase.rst
docs/setup/databases/sqlite/: index.rst
docs/setup/python/: index.rst  linux.rst  macos.rst  windows.rst
docs/setup/terminals/: index.rst  windows.rst
docs/setup/vector-stores/: index.rst  sqlite-vec.rst
docs/setup/vector-stores/pgvector/: docker.rst  index.rst  linux.rst  supabase.rst
docs/templates/: _google_tag_manager_body.html  _google_tag_manager_script.html  _redirect_host.html  base.html  layout.html  page.html
docs/tools/: index.md  melon.md  naver.md  yes24.md
docs/training/insightmining/: django-llm-chat.md  index.md  typical.md
docs/utils/: index.rst  pyhub-git-commit-apply.rst
src/pyhub_ai/: __init__.py  specs.py  utils.py
src/pyhub_ai/agents/: chat.py  data_analyst_chat.py
src/pyhub_ai/consumers/: base_chat.py  chat.py  data_analyst.py  llm.py
src/pyhub_ai/mixins/: __init__.py  agent.py  llm.py
src/pyhub_ai/static/pyhub_ai/tailwind/: styles.css
src/pyhub_ai/static_src/: package.json
src/pyhub_ai/templates/pyhub_ai/: _chat_message.html
src/pyhub_ai/tools/: naver.py  python.py
src/pyhub_ai/tools/base/: openai.py
src/pyhub_ai/views/: data_analyst.py
src/sphinx_comments/: __init__.py
tests/: conftest.py  settings.py  test_consumers.py  test_decorators.py
tests/accounts/: urls.py  views.py
tests/example/: admin.py  agents.py  consumers.py  forms.py  models.py  requirements.txt  routing.py  urls.py  views.py
tests/example/migrations/: 0001_initial.py
tests/example/templates/example/: _text_content_block.html  base.html  bestseller_maker.html  index.html
tests/example/tests/: test_consumers.py
tests/myproj/: asgi.py  settings.py  urls.py
tests/tests/: test_brain.py  test_consumers.py  test_decorators.py  test_llmmixin.py  test_tools.py  test_utils.py  test_views.py
