[project]
name = "django-pyhub-ai"
version = "0.1.4"
description = "Django app library for AI integration"
authors = [{ name = "Chinseok Lee", email = "me@pyhub.kr" }]
dependencies = [
    "django>=4.0.0",
    "channels",
    "daphne",
    "django-cotton",
    "django-ninja",
    "django-ninja-extra",
    "pillow",
    "httpx",
    "pydantic",
    "pyyaml",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langchain-openai",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
data = ["pandas", "numpy", "tabulate", "seaborn", "matplotlib"]
test = [
    "pytest",
    "pytest-django",
    "pytest-testdox",
    "pytest-asyncio",
    "pytest-cov",
]
dev = ["django-debug-toolbar", "black", "isort", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhub_ai"]
exclude = ["src/pyhub_ai/static_src/**/*", "**/__pycache__", "**/.DS_Store"]

[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --testdox --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"
