[project]
name = "django-pyhub-ai"
version = "0.5.1"
description = "Django app library for AI integration"
authors = [{ name = "Chinseok Lee", email = "me@pyhub.kr" }]
dependencies = [
    "django>=4.0.0",
    "channels",
    "daphne",
    "django-cotton",
    "django-ninja",
    "django-ninja-extra",
    "pillow",
    "httpx",
    "pydantic",
    "pyyaml",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langchain-openai",
    "pandas",
    "numpy",
    "tabulate",
    "seaborn",
    "matplotlib",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-testdox",
    "pytest-asyncio",
    "django-debug-toolbar",
    "django-environ",
]
dev = ["django-debug-toolbar", "black", "isort", "ruff", "djlint"]

[project.urls]
Homepage = "https://github.com/pyhub-kr/django-pyhub-ai"
# Documentation = "https://pyhub-kr.github.io/django-pyhub-ai"
Repository = "https://github.com/pyhub-kr/django-pyhub-ai"
Issues = "https://github.com/pyhub-kr/django-pyhub-ai/issues"
# Changelog = "https://github.com/pyhub-kr/django-pyhub-ai/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhub_ai"]
exclude = ["src/pyhub_ai/static_src/**/*", "**/__pycache__", "**/.DS_Store"]

[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "tests.myproj.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --testdox --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = ["DATABASE_URL=sqlite://:memory:"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

# https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
indent = 2
# blank_line_after_tag = "load,extends,include"
# blank_line_before_tag = "load,extends,include"
# line_break_after_multiline_tag = true
# close_void_tags = true
# custom_html = "mjml,simple-greeting,c-\\w+"
# exclude = ".venv,venv,.tox,.eggs,..."
# format_attribute_template_tags = true
# format_css = true
# format_js = true
# ignore = "H014,H015"
# ignore_blocks = "raw,example"
# ignore_case = true
# linter_output_format = "{filename}:{line}: {code} {message} {match}"
# max_attribute_length = 10
# max_blank_lines = 2
# max_line_length = 120
# no_function_formatting = true
# preserve_blank_lines = true
# preserve_leading_space = true
