[project]
name = "django-pyhub-ai"
version = "0.8.24"
description = "Django app library for AI integration"
authors = [{ name = "Chinseok Lee", email = "me@pyhub.kr" }]
dependencies = [
    "django>=4.0.0",
    "channels",
    "daphne",
    "django-cotton",
    "django-environ",
    "django-lifecycle",
    "django-ninja",
    "django-ninja-extra",
    "pillow",
    "httpx",
    "beautifulsoup4",
    "pydantic",
    "pyyaml",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "tenacity",
    # langchain을 통해서 의존성이 추가되어있습니다.
    "typing-extensions",
    "pandas",
    "numpy",
    "tabulate",
    "seaborn",
    "matplotlib",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pre_commit", "django-debug-toolbar", "black", "isort", "ruff", "djlint"]
test = ["pytest", "pytest-django", "pytest-testdox", "pytest-asyncio", "django-debug-toolbar"]
docs = [
    "sphinx~=8.1.0",
    "myst-parser~=4.0.0",
    "sphinx-autobuild~=2024.10.3",
    "sphinx-rtd-theme~=3.0.0",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.6.1",
    "sphinx-togglebutton~=0.3.2",
    "furo~=2024.8.6",
    # zip 직접 설치 부분을 빼고, /src/ 에 추가
    # sphinx-comments 라이브러리는 더 이상 관리되지 않고 있어서, 이를 가져와서 패치했습니다.
    # "sphinx-comments2 @ https://github.com/allieus/sphinx-comments2/archive/refs/heads/master.zip",
]
build = [
    "setuptools",
    "wheel",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pyhub-kr/django-pyhub-ai"
Documentation = "https://ai.pyhub.kr"
Repository = "https://github.com/pyhub-kr/django-pyhub-ai"
Issues = "https://github.com/pyhub-kr/django-pyhub-ai/issues"
# Changelog = "https://github.com/pyhub-kr/django-pyhub-ai/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhub_ai"]
exclude = ["src/pyhub_ai/static_src/**/*", "**/__pycache__", "**/.DS_Store"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "tests.myproj.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --testdox --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = ["DATABASE_URL=sqlite://:memory:"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120
target-version = "py310"

# https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
indent = 2
